# Structural-and-Non-structural-line

./: .gitignore  CMakeLists.txt  README.md
app/: line_optlimization.cpp
main/: line_optlimization.cpp
python_tool/: GeometryLib.py  draw_points.py  draw_trajcory.py  plot_result.py  plot_simulate.py
src/factor/: general_line_factor.cpp  general_line_factor.h  general_line_parameterization.h  normalizeAngle.h  plucker_line_parameterization.cpp  plucker_line_parameterization.h  plucker_projection_factor.cpp  plucker_projection_factor.h  pose_local_parameterization.cpp  pose_local_parameterization.h
src/utils/: EigenTypes.h  Twist.h  line_geometry.cpp  line_geometry.h  line_manager.cpp  line_manager.h  utility.h
